# taskcat

./: .bumpversion.cfg  .codecov.yml  .coverage.80a997113ac6.83065.XCSWiWFx  .coveragerc  .gitallowed  .gitignore  .pre-commit-config.yaml  .project_config.yml  .pylintrc  .taskcat_w_parameters.yaml  .travis.yml  404.html  CODEOWNERS  CODE_OF_CONDUCT.html  CONTRIBUTING.html  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  FAQ.html  FAQ.md  MANIFEST  MANIFEST.in  PULL_REQUEST_TEMPLATE.html  README.AMIUPDATER.html  README.AMIUPDATER.md  README.md  THIRD_PARTY  alchemist.py  beautycorn.py  build.sh  conf.py  dev-requirements.txt  do_docs_generate.sh  do_e2e_tests.sh  docker-install  docs-requirements.txt  foo.py  gendocs.sh  generate_config_docs.py  generate_schema.py  (+31 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.project_automation/functional_tests/: Dockerfile  entrypoint.sh
.project_automation/init/: Dockerfile  entrypoint.sh
.project_automation/provision/: entrypoint.sh
.project_automation/publication/: Dockerfile  entrypoint.sh
.project_automation/static_tests/: entrypoint.sh
.project_automation/update/: Dockerfile  entrypoint.sh  update.py
FAQ/: index.html
administrative/CODE_OF_CONDUCT/: index.html
api/: index.html
apidocs/taskcat/: exceptions.html  index.html
assets/: build_docs.sh  mkdocs.yml
assets/css/: taskcat_reporting.css
assets/docs/: FAQ.md
aws-quickstart.github.io/: build_github_docs.sh
build-tools/: genpydoc.sh  new-develop-version.sh  new-master-version.sh  newversion.sh
configuration/: index.html
css/: base.css
doc/: taskcat.m.html
docker/build_files/: build_develop.sh  build_image.sh  build_master.sh
docs/: INSTALLATION.html  INSTALLATION.md  README.md  TASKCAT_CONFIG_FILE.md  api.md  configuration.md  custom.css  dynamic-values.md  examples.md  gen_ref_pages.py  index.html  index.md  installation.md  parameter-overrides.md  preso.html  quickstart.md  readme.amiupdater.html  readme.amiupdater.md  schema.md  troubleshooting.md
docs/INSTALLATION/: index.html
docs/administrative/: CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md
docs/apidocs/: 404.html  CODE_OF_CONDUCT.html  CONTRIBUTING.html  FAQ.html  PULL_REQUEST_TEMPLATE.html  README.AMIUPDATER.html  index.html  sitemap.xml
docs/examples/: advanced.md  basic.md  index.md
docs/getting-started/: configuration.md  index.md  installation.md  quickstart.md
docs/preso/: _content.html  _footer.html  _header.html  index.html
docs/readme.amiupdater/: index.html
docs/schema/: taskcat_schema.html  taskcat_schema.md  testing_schema.html
docs/support/: troubleshooting.md
docs/usage/: DYNAMIC_VALUES.md  (+6 more)
dynamic-values/: index.html
examples/: index.html
getting-started/: index.html
installation/: index.html
installer/: docker-install-develop  docker-install-master  docker-installer.sh
mkdocs/: search_index.json
module/: index.html
output-assets/: taskcat.css
package/: __init__.py  stacker.py  sweeper.py  utils.py
parameter-overrides/: index.html
pdoc-assets/: html.mako
pip/: sweeper.m.html  taskcat.m.html
quickstart/: index.html
reference/: _amiupdater.html  _cli_core.html  _client_factory.html  _common_utils.html  _config.html  _dataclasses.html  _legacy_config.html  _logger.html  _name_generator.html  _project_generator.html  _s3_stage.html  _s3_sync.html  _template_params.html  _tui.html  taskcat_plugin_testhook.html
schema/: index.html
scripts/: README.md  build_develop.sh  build_master.sh  build_validation-dev.sh  setup_stub-develop.py  setup_stub-master.py  taskcat  taskcat_taas
search/: search_index.json
taskcat/: .version  __init__.py  _amiupdater.py  _cfn_lint.py  _cfn_logutils.py  _cfn_resources.py  _cli.py  _cli_core.py  _client_factory.py  _common_utils.py  _config.py  _config_types.py  _dataclasses.py  _deployer.py  _generate_reports.py  _lambda_build.py  _legacy_config.py  _logger.py  _name_generator.py  _project_generator.py  _project_generator_runner.py  _reaper.py  _s3_stage.py  _s3_sync.py  _stacker.py  _taskcat.py  _template_params.py  _tui.py  _tui_reprint.py  _tui_screen.py  _utils.py  _validate.py  amiupdater.py  cfn_lint.py  cfn_logutils.py  cfn_resources.py  cli.py  cli_core.py  client_factory.py  colored_console.py  (+26 more)
taskcat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
taskcat_outputs/: index.html  tcat-tag-taskcat-json-55c08ae1-us-east-1-cfnlogs.txt  tcat-tag-taskcat-json-704195e0-us-east-1-cfnlogs.txt  tcat-tag-taskcat-yaml-55c08ae1-us-east-1-cfnlogs.txt  tcat-tag-taskcat-yaml-704195e0-us-east-1-cfnlogs.txt
taskcat_plugin_testhook/: __init__.py
tests/: test_StackURLHelper.py  test_amiupdater.py  test_cfn_lint.py  test_cfn_logutils.py  test_cfn_resources.py  test_cfn_stack.py  test_cfn_template.py  test_cfn_threaded.py  test_cli.py  test_cli_core.py  test_cli_module_lint.py  test_cli_module_package.py  test_cli_module_test.py  test_client_factory.py  test_common_utils.py  test_config.py  test_dataclasses.py  test_generate_config.py  test_input_parameter_generator.py  test_lambda_package.py  test_project_generator.py  test_s3_sync.py  test_stack_url_helper.py  test_template_params.py  test_testing.py
troubleshooting/: index.html
(+481 files in other folders)
