[tool.poetry]
version = "0.9.52"
authors = ["Andrew Glenn", "Jay McConnell", "Shivansh Singh", "Tony Vattathil"]
description = "An OpenSource Cloudformation Deployment Framework"
name = "taskcat"

[tool.poetry.scripts]
taskcat = "taskcat._cli:main"

[tool.portray.mkdocs.theme]
favicon = "https://raw.githubusercontent.com/aws-ia/taskcat/main/assets/docs/images/tcat.png"
logo = "https://raw.githubusercontent.com/aws-ia/taskcat/main/assets/docs/images/tcat.png"
name = "material"
palette = {primary = "black", accent = "orange"}



[tool.portray.mkdocs]
extra_css = ['docs/custom.css']

[[tool.portray.mkdocs.nav]]
Home = "README.md"

[[tool.portray.mkdocs.nav]]
Installation = "docs/INSTALLATION.md"


[[tool.portray.mkdocs.nav]]
    [[tool.portray.mkdocs.nav.Usage]]
        "General Usage" = "docs/usage/GENERAL_USAGE.md"

    [[tool.portray.mkdocs.nav.Usage]]
        "Parameter Overrides" = "docs/usage/PARAMETER_OVERRIDES.md"

    [[tool.portray.mkdocs.nav.Usage]]
        "Psuedo Parameters" = "docs/usage/PSUEDO_PARAMETERS.md"

[[tool.portray.mkdocs.nav]]
"Configuration Schema" = "docs/schema/taskcat_schema.md"

[[tool.portray.mkdocs.nav]]
    [[tool.portray.mkdocs.nav.Administrative]]
        "Code of Conduct" = "docs/administrative/CODE_OF_CONDUCT.md"

    [[tool.portray.mkdocs.nav.Administrative]]
        "Contributing" = "docs/administrative/CONTRIBUTING.md"

# [[tool.portray.mkdocs.nav]]
# Home = "README.md"
#
# [[tool.portray.mkdocs.nav]]
# Usage = "docs/usage/"
