[tool.poetry]
version = "0.9.54"
authors = ["Andrew Glenn", "Jay McConnell", "Shivansh Singh", "Tony Vattathil"]
description = "An OpenSource Cloudformation Deployment Framework"
name = "taskcat"

[tool.poetry.dependencies]
pathspec = '0.10.3'
reprint = "*"
tabulate = ">=0.8.2, <1.0"
cfn_lint = ">=0.72.0,<1.0"
setuptools = ">=40.4.3"
boto3 = ">=1.9.21,<2.0"
botocore = ">=1.12.21,<2.0"
urllib3 = "<2"
yattag = ">=1.10.0,<2.0"
PyYAML = "~=6.0"
jinja2 = ">=3.1.1,<4.0"
markupsafe = "2.0.1"
requests = ">=2.31.0"
jsonschema = "~=3.0"
docker = "~=7.0"
dulwich = "~=0.19"
dataclasses-jsonschema = ">=2.9.0,<2.15.2"
GitPython = ">=3.1.43"
pip = "*"
python = ">=3.8.0,<4.0"


[tool.poetry.scripts]
taskcat = "taskcat._cli:main"

[tool.portray.mkdocs.theme]
favicon = "https://raw.githubusercontent.com/aws-ia/taskcat/main/assets/docs/images/tcat.png"
logo = "https://raw.githubusercontent.com/aws-ia/taskcat/main/assets/docs/images/tcat.png"
name = "material"
palette = {primary = "black", accent = "orange"}



[tool.portray.mkdocs]
extra_css = ['docs/custom.css']

[[tool.portray.mkdocs.nav]]
Home = "README.md"

[[tool.portray.mkdocs.nav]]
Installation = "docs/INSTALLATION.md"


[[tool.portray.mkdocs.nav]]
    [[tool.portray.mkdocs.nav.Usage]]
        "General Usage" = "docs/usage/GENERAL_USAGE.md"

    [[tool.portray.mkdocs.nav.Usage]]
        "Parameter Overrides" = "docs/usage/PARAMETER_OVERRIDES.md"

    [[tool.portray.mkdocs.nav.Usage]]
        "Psuedo Parameters" = "docs/usage/PSUEDO_PARAMETERS.md"

[[tool.portray.mkdocs.nav]]
"Configuration Schema" = "docs/schema/taskcat_schema.md"

[[tool.portray.mkdocs.nav]]
    [[tool.portray.mkdocs.nav.Administrative]]
        "Code of Conduct" = "docs/administrative/CODE_OF_CONDUCT.md"

    [[tool.portray.mkdocs.nav.Administrative]]
        "Contributing" = "docs/administrative/CONTRIBUTING.md"

# [[tool.portray.mkdocs.nav]]
# Home = "README.md"
#
# [[tool.portray.mkdocs.nav]]
# Usage = "docs/usage/"
