[tool.poetry]
version = "0.9.57"
authors = ["Andrew Glenn", "Jay McConnell", "Shivansh Singh", "Tony Vattathil"]
description = "An OpenSource Cloudformation Deployment Framework"
name = "taskcat"

[tool.poetry.dependencies]
pathspec = '0.10.3'
reprint = "*"
tabulate = ">=0.8.2, <1.0"
cfn_lint = ">=0.78.1,<2.0"
setuptools = ">=40.4.3"
boto3 = ">=1.9.21,<2.0"
botocore = ">=1.12.21,<2.0"
urllib3 = "<2"
yattag = ">=1.10.0,<2.0"
PyYAML = "~=6.0"
jinja2 = ">=3.1.1,<4.0"
markupsafe = ">=2.0.1"
requests = ">=2.31.0"
jsonschema = "~=3.0"
docker = "~=7.0"
dulwich = "~=0.19"
dataclasses-jsonschema = ">=2.9.0,<2.15.2"
GitPython = ">=3.1.43"
pip = "*"
python = ">=3.8.0,<4.0"


[tool.poetry.scripts]
taskcat = "taskcat._cli:main"
