[metadata]
description-file = README.md

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    .tox
max-complexity = 10
max-line-length = 88
select = C,E,F,W,B,B950,T001,T003
# C812, C815, W503 clash with black
ignore = E501,C812,C815,W503,E203

[isort]
line_length = 88
indent = '    '
multi_line_output = 3
default_section = FIRSTPARTY
skip = env
include_trailing_comma = true
combine_as_imports = True
force_grid_wrap = 0
known_first_party = taskcat
known_third_party = boto3,botocore,yaml,requests

[tool:pytest]
# can't do anything about 3rd party modules, so don't spam us
filterwarnings =
    ignore::DeprecationWarning:botocore
    ignore::DeprecationWarning:yaml

[mypy-setuptools] # don't want to stub external libraries for now
ignore_missing_imports = True

[mypy-boto3] # don't want to stub external libraries for now
ignore_missing_imports = True
